--- a/src/components/burger/buildControls/BuildControls.css
+++ b/src/components/burger/buildControls/BuildControls.css
@@ -1,13 +1,14 @@
 .BuildControls {
-    width: 100%;
+    text-align: center;
+    width: 50%;
     background-color: #DAA972;
     display: flex;
     flex-flow: column;
     align-items: center;
     box-shadow: 0 2px 2px gainsboro;
     padding: 10px 0;
+    margin: 0 auto;
 }
-
 
 .OrderButton {
     background-color: #DAD735;
