--- a/src/components/burger/buildControls/BuildControls.css
+++ b/src/components/burger/buildControls/BuildControls.css
@@ -1,16 +1,18 @@
 .BuildControls {
     text-align: center;
-    width: 50%;
+    width: 60%;
     background-color: #DAA972;
     display: flex;
     flex-flow: column;
     align-items: center;
-    box-shadow: 0 2px 2px gainsboro;
+    box-shadow: 0 5px 5px gainsboro;
     padding: 10px 0;
     margin: 0 auto;
+    border-radius: 30px;
 }
 
 .OrderButton {
+    border-radius: 5px;
     background-color: #DAD735;
     outline: none;
     cursor: pointer;
