--- a/src/components/burger/buildControls/buildControl/BuildControl.css
+++ b/src/components/burger/buildControls/buildControl/BuildControl.css
@@ -37,11 +37,13 @@
 }
 
 .BuildControl .Less {
+    border-radius: 5px;
     background-color: #D39952;
     color: white;
 }
 
 .BuildControl .More {
+    border-radius: 5px;
     background-color: #8F5E1E;
     color: white;
 }
